testsuite/tests/interpreter_errors/invalid_regex/test.out
script.lkql:2:39: error: Failed to compile regular expression.
2 | select BasicDecl(p_defining_name() is "*")
  |                                       ^^^

